fix: non-vulnerable

--- a/content/supplement/ordinals/rune.mdx
+++ b/content/supplement/ordinals/rune.mdx
@@ -269,6 +269,8 @@ pub struct Runestone {
 - `mint` - 交易中的铸造符文数据
 - `pointer` - 符文分配的到的输出索引
 
+<RunestoneDecipher />
+
 ## 交易
 
 为了防止抢跑, 符文的交易同样需要分为两笔交易:
